kubernetes-networks/canary/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-prod
spec:
  selector:
    app: web-prod
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-canary
spec:
  selector:
    app: web-canary
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
