kubernetes-networks/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: web-svc-prod
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /canary
        pathType: Prefix
        backend:
          service:
            name: web-svc-prod
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"  
    nginx.ingress.kubernetes.io/canary-by-header: "test-header"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  defaultBackend:
    service:
      name: web-svc-canary
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /canary
        pathType: Prefix
        backend:
          service:
            name: web-svc-canary
            port:
              number: 8000
